test/good/ex5.cb
def main() {
    let y = if true {
         3
    } else {
         2
    };
    printInt(y);
    printString("\n");
}
