test/bad/ex4.cb
// tail expression of while loop has to be of type unit
def main() {
    let x = while true {
        3
    }
}
